--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1147,3 +1147,29 @@ border:  2px solid var(--color-primary);
     height: 200px;
   }
 }
+
+@media screen and (max-height: 730px) {
+    .intro {
+        padding-bottom: 80px; /* Alttan boşluk ver */
+    }
+
+    .scroll-down {
+        margin-top: 30px; /* Scroll down ile hire me arasında boşluk */
+    }
+
+    .btn.btn-default {
+        margin-bottom: 20px; /* Buton ile diğer içerikler arasında boşluk */
+    }
+
+    .avatar-container {
+        transform: scale(0.9); /* İsteğe bağlı: avatarı biraz küçült */
+    }
+
+    h1 {
+        font-size: 1.8rem; /* Başlık boyutunu küçült */
+    }
+
+    .typing-container {
+        font-size: 1rem;
+    }
+}
