--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1148,9 +1148,9 @@ border:  2px solid var(--color-primary);
   }
 }
 
-@media screen and (max-height: 730px) {
+@media screen and (max-height: 830px) {
     .intro {
-        padding-bottom: 80px; /* Alttan boşluk ver */
+        height: 90dvh; /* Alttan boşluk ver */
     }
 
     .scroll-down {
@@ -1173,3 +1173,17 @@ border:  2px solid var(--color-primary);
         font-size: 1rem;
     }
 }
+@media screen and (max-width: 600px) {
+    .sercan-container {
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        max-width: 100vw;
+    }
+
+    .sercan-container-img {
+        max-width: 200%;
+        /* Mobilde daha büyük gözüksün */
+    }
+}
+
